# channels-rpc

./: .gitignore  .pre-commit-config.yaml  .ruff_overrides.toml  .sourcery.yaml  CHANGELOG.md  CLAUDE.md  HTTP_CONSUMER_ISSUES.md  LICENSE  PROGRESS.md  README.md  SESSION_SUMMARY.md  example_database_usage.py  mypy_after.txt  mypy_before.txt  pyproject.toml
channels_rpc/: __init__.py  apps.py  async_json_rpc_websocket_consumer.py  async_rpc_base.py  async_rpc_http_consumer.py  config.py  context.py  decorators.py  exceptions.py  json_rpc_websocket_consumer.py  jsonrpcconsumer.py  limits.py  logs.py  middleware.py  protocols.py  registry.py  rpc_base.py  signals.py  utils.py  validation.py
example/: manage.py
example/django_example/: consumer.py  consumer_test.py  routing.py  settings.py  test_websockets.py  urls.py  wsgi.py
examples/: comprehensive_example.py  database_usage.py  introspection_demo.py  middleware_usage.py  timeout_example.py
tests/: conftest.py  settings.py
tests/fixtures/: json_rpc_messages.py  websocket_helpers.py
tests/integration/: test_http_consumer.py  test_websocket_consumers.py
tests/performance/: README.md  SUMMARY.md  __init__.py  test_load.py
tests/unit/: test_async_rpc_base.py  test_decorators.py  test_exceptions.py  test_introspection.py  test_registry.py  test_rpc_base_processing.py  test_rpc_base_validation.py  test_timeout_enforcement.py  test_utils.py
